Method: Python multi return dataclass

--- a/stingeripc/templates/python/interface_types.py.jinja2
+++ b/stingeripc/templates/python/interface_types.py.jinja2
@@ -4,7 +4,7 @@ on the next generation.
 
 It contains enumerations used by the {{stinger.name}} interface.
 """
-
+from dataclasses import dataclass
 {%if stinger.uses_enums()%}from enum import Enum{%endif%}
 
 {%for ie_name, ie in stinger.enums.items() %}
@@ -19,6 +19,10 @@ class {{ie_name | UpperCamelCase }}(Enum):
 
 {%for method_name, method in stinger.methods.items()%}
 {%-if method.return_value.arg_type.name.lower() == 'struct'%}
-{{method_name|UpperCamelCase}}ReturnValue = namedtuple("{{method_name|UpperCamelCase}}ReturnValue", [{%for arg in method.return_value.members%}"{{arg.name}}", {%endfor%}])
+@dataclass
+class {{method_name|UpperCamelCase}}ReturnValue:
+    {%-for arg in method.return_value.members%}
+    {{arg.name}}: {{arg.python_local_type}}
+    {%endfor%}
 {%endif-%}
 {%endfor%}
