--- a/stingeripc/templates/cpp/include/return_types.hpp.jinja2
+++ b/stingeripc/templates/cpp/include/return_types.hpp.jinja2
@@ -1,5 +1,7 @@
 
 #pragma once
+#include <string>
+#include "enums.hpp"
 
 {%for method_name, method in stinger.methods.items()%}
 {%-if method.return_value.arg_type.name.lower() == 'struct'%}
