WIP C++ Method Client

--- a/stingeripc/templates/cpp/examples/client_main.cpp.jinja2
+++ b/stingeripc/templates/cpp/examples/client_main.cpp.jinja2
@@ -16,6 +16,10 @@ int main(int argc, char** argv) {
     });
     {%-endfor%}
 
+    {%-for method_name, method in stinger.methods.items() %}
+    
+    {%-endfor%}
+
     std::cout << "Connected and waiting.  Use Ctrl-C to exit." << std::endl;
 
     while (true) {
